k8s/networkpolicy/backend-egress-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: backend-egress-postgres
  namespace: homework

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: backend

  policyTypes:
  - Egress

  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: postgres

    ports:
    - protocol: TCP
      port: 5432
