k8s/networkpolicy/backend-to-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: backend-to-postgres
  namespace: homework

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgres

  policyTypes:
  - Ingress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: backend

    ports:
    - protocol: TCP
      port: 5432
