k8s/networkpolicy/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny
  namespace: homework

spec:
  podSelector: {}

  policyTypes:
  - Ingress
  - Egress
