k8s/networkpolicy/frontend-egress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-egress-backend
  namespace: homework
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: frontend

  policyTypes:
    - Egress

  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: backend

      ports:
        - protocol: TCP
          port: 8080
