k8s/networkpolicy/frontend-to-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: frontend-to-backend
  namespace: homework

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: backend

  policyTypes:
  - Ingress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: frontend

    ports:
    - protocol: TCP
      port: 8080
